--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint",
     "electron:build": "cross-env NODE_OPTIONS=--openssl-legacy-provider vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
+    "electron:pack": "cross-env NODE_OPTIONS=--openssl-legacy-provider vue-cli-service electron:build --dir",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
   },
@@ -15,7 +16,9 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "cross-env": "^7.0.3",
+    "dataurl": "^0.1.0",
     "fs": "^0.0.1-security",
+    "howler": "^2.2.4",
     "path": "^0.12.7",
     "register-service-worker": "^1.7.2",
     "roboto-fontface": "*",
